fix: homepage image overflowing on smaller screens

--- a/public/style.css
+++ b/public/style.css
@@ -102,6 +102,7 @@ body {
 .home__image {
   display: block;
   margin: 2rem auto 2rem;
+  max-width: 100%;
 }
 
 /** About page **/
